# hg-git-fast-import

./: .gitignore  .travis.yml  Cargo.toml  Cross.toml  MIT-LICENSE  Makefile  README.md  appveyor.yml  build-pgo-generate.sh  build-pgo-use.sh  snapcraft.yaml  update_version.sh
.github/workflows/: rust.yml
ci/: before_deploy.ps1  before_deploy.sh
docker/: Dockerfile  build.sh  run.sh
examples/: authors.toml  multi.toml  single.toml
src/: cli.rs  collections.rs  config.rs  env.rs  error.rs  git.rs  lib.rs  main.rs  multi.rs  single.rs  tools.rs
templates/: README.md
