[package]
name = "hg-git-fast-import"
version = "1.3.0"
authors = ["Alexander Korolev <kilork@yandex.ru>"]
license = "Unlicense OR MIT"
description = """
A utility to import single and multiple Mercurial repositories to Git.
"""
readme = "README.md"
homepage = "https://github.com/kilork/hg-git-fast-import"
repository = "https://github.com/kilork/hg-git-fast-import"
keywords = ["cli", "hg", "git", "mercurial", "convert"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
log = "0.4"
simplelog = "0.7"
regex = "1"
lazy_static = "1"
toml = "0.5"
structopt = "0.3"
hg-parser = "0.3"
ordered-parallel-iterator = "0.1"
indicatif = "0.13"
dialoguer = "0.5"
failure = "0.1"
exitfailure = "0.5"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
pretty_assertions = "0.6"

[profile.release]
lto = true
incremental = true