[package]
authors = ["Alexander Korolev <kilork@yandex.ru>"]
categories = ["command-line-utilities"]
description = """
A utility to import single and multiple Mercurial repositories to Git.
"""
edition = "2021"
homepage = "https://github.com/kilork/hg-git-fast-import"
keywords = ["cli", "hg", "git", "mercurial", "convert"]
license = "Unlicense OR MIT"
name = "hg-git-fast-import"
readme = "README.md"
repository = "https://github.com/kilork/hg-git-fast-import"
rust-version = "1.78"
version = "1.5.0"

[lib]
doctest = false

[features]
jemalloc = ["jemallocator"]

[dependencies]
anyhow = "1"
thiserror = "1"

tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

lazy_static = "1"
regex = "1"

toml = "0.8"

hg-parser = "0.9"
ordered-parallel-iterator = "0.2"
structopt = "0.3"

dialoguer = "0.11"
indicatif = "0.17"

jemallocator = {version = "0.5", optional = true}

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"

[profile.release]
incremental = true
lto = true
